[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
